bk_ida/gccida/g0/cselib_invalidate_regno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/cselib.c:1420:52: error: must use 'enum' tag to refer to type 'machine_mode'
void  cselib_invalidate_regno( unsigned int regno, machine_mode mode) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/cselib.c:1479:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/cselib.c:1479:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/cselib.c:1535:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[*( ( unsigned __int8 *)v->u.val_rtx + 2)] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/cselib.c:1536:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)v->u.val_rtx + 2)] == MODE_COMPLEX_FLOAT; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cselib_invalidate_regno/src/obj/cselib.o] Error 1
